[package]
name = "img-transform-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
aws-sdk-s3 = "0.30"
aws-types = "0.56"
aws-credential-types = "0.56"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.4"
opencv = { version = "0.97", features = ["clang-runtime"] }
moka = { version = "0.11", features = ["future"] }
futures = "0.3"
warp = { version = "0.3.7", features = ["compression"] }